tests/ui/errors/snapshots/infer_propagate_in_logical_and_rhs.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `?` cannot be used inside a condition
   ╭─[test.lis:7:14]
 6 │ fn run() -> Result<bool, string> {
 7 │   Ok(true && check("x")?)
   ·              ─────┬─────
   ·                   ╰── `?` inside condition
 8 │ }
   ╰────
  help: Bind the result first: `let val = expression?; if val { ... }` · code: [infer.propagate_in_condition]
