tests/ui/errors/snapshots/infer_propagate_in_logical_or_rhs.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `?` cannot be used inside a condition
   ╭─[test.lis:7:15]
 6 │ fn run() -> Result<bool, string> {
 7 │   Ok(false || check("x")?)
   ·               ─────┬─────
   ·                    ╰── `?` inside condition
 8 │ }
   ╰────
  help: Bind the result first: `let val = expression?; if val { ... }` · code: [infer.propagate_in_condition]
