tests/ui/errors/snapshots/infer_propagate_in_pipeline.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid `?` in pipeline
   ╭─[test.lis:1:18]
 1 │ fn test() { x |> validate? |> transform; }
   ·                  ────┬────
   ·                      ╰── propagate operator used here
   ╰────
  help: Extract the `?` operation to a `let` binding: `let result = (... |> parse)?` · code: [parse.propagate_in_pipeline]
