tests/ui/errors/snapshots/infer_pub_interface_not_exportable.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Public type is not exportable
   ╭─[test.lis:2:15]
 1 │ 
 2 │ pub interface reader {
   ·               ───┬──
   ·                  ╰── `reader` cannot be exported from Go
 3 │   fn read() -> int
   ╰────
  help: Public types become exported Go identifiers, which must start with an uppercase letter. Rename to `Reader` · code: [infer.pub_type_not_exportable]
