tests/ui/errors/snapshots/infer_pub_struct_not_exportable.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Public type is not exportable
   ╭─[test.lis:2:12]
 1 │ 
 2 │ pub struct widget {
   ·            ───┬──
   ·               ╰── `widget` cannot be exported from Go
 3 │   pub x: int,
   ╰────
  help: Public types become exported Go identifiers, which must start with an uppercase letter. Rename to `Widget` · code: [infer.pub_type_not_exportable]
