tests/ui/errors/snapshots/infer_pub_type_alias_not_exportable.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Public type is not exportable
   ╭─[test.lis:2:10]
 1 │ 
 2 │ pub type widget = int
   ·          ───┬──
   ·             ╰── `widget` cannot be exported from Go
 3 │ 
   ╰────
  help: Public types become exported Go identifiers, which must start with an uppercase letter. Rename to `Widget` · code: [infer.pub_type_not_exportable]
