tests/ui/errors/snapshots/infer_range_to_inclusive_not_iterable.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Not iterable
   ╭─[test.lis:5:12]
 4 │ fn test() {
 5 │   for i in ..=10 {
   ·            ──┬──
   ·              ╰── `RangeToInclusive` has no start bound
 6 │     fmt.Print(f"{i}");
   ╰────
  help: Use a range with a start bound, e.g. `0..10` instead of `..10` · code: [infer.range_not_iterable]
